# gmock-autotools

./: .gitignore  IListener.hpp  IMonitor.hpp  Listener.cpp  Listener.hpp  Makefile.am  arith.hpp  configure.ac  main.cpp
test/: Makefile.am  arith.cpp  arith_test.cpp  configure.ac  main.cpp
